# Stereo_Vision

code/6轴机械臂/6轴机械臂ROS控制代码/src/seed_serial/: CMakeLists.txt  package.xml
code/6轴机械臂/6轴机械臂ROS控制代码/src/seed_serial/include/seed_serial/: order.h  seed_serial.h
code/6轴机械臂/6轴机械臂ROS控制代码/src/seed_serial/src/: order.cpp  state.cpp
code/Arduino气路控制代码/arduino_mega_ws/arduino_ros/: platformio.ini
code/Arduino气路控制代码/arduino_mega_ws/arduino_ros/src/: main.cpp
code/立体视觉源码/zju_bin_detect/: README.md
code/立体视觉源码/zju_bin_detect/include/zju_bin_detect/: BoxColorDetect.h  BoxDim.h
code/立体视觉源码/zju_bin_detect/launch/: bin_detect.launch
code/立体视觉源码/zju_bin_detect/src/: bin_detect_demo.cpp  bin_dim_node.cpp
code/立体视觉源码/zju_bin_detect/src/bin_detect/: BoxDim.cpp
code/立体视觉源码/zju_bin_detect/urdf/: wpb_home.urdf
doc/: Arduino在ROS中的应用.docx  系统环境安装与配置.docx  调度服务器代码部署.docx
doc/6轴机械臂说明书/: Seed_机械臂脱机运行_2019.doc  机械臂标定.docx  问题及解决方法.doc
seed_serial/: CMakeLists.txt  package.xml
seed_serial/include/seed_serial/: armController.h  arm_controller.h  command.h  kinematics.h  order.h  seed_serial.h  state.h
seed_serial/src/: armController.cpp  arm_controller.cpp  kinematics.cpp  order.cpp  seed_serial.cpp  state.cpp  task.cpp
seed_serial/srv/: cartHorizon.srv
zju_bin_detect/: CMakeLists.txt  package.xml
zju_bin_detect/config/: wpb_home.yaml
zju_bin_detect/include/zju_bin_detect/: BoxColorDetect.h  BoxDim.h
zju_bin_detect/launch/: bin_detect.launch
zju_bin_detect/msg/: BoxParam.msg  ObjectBox.msg
zju_bin_detect/rviz/: bin_detect.rviz
zju_bin_detect/scripts/: 90-kinect2.rules  create_udev_rules.sh  delete_udev_rules.sh  ftdi.rules  install_for_kinetic.sh  install_for_melodic.sh
zju_bin_detect/src/: bin_detect_demo.cpp  bin_dim_node.cpp
zju_bin_detect/src/bin_detect/: BoxColorDetect.cpp  BoxDim.cpp
zju_bin_detect/urdf/: wpb_home.urdf
